<resources>
    <string name="app_name">Glow</string>
    <string name="title_activity_get_started">GetStartedActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="by_clicking_start_you_agree_to_our">By clicking start, you agree to our</string>
    <string name="and">and</string>
    <string name="privacy"><u>Privacy</u></string>
    <string name="get_started">Get Started</string>
    <string name="mobile_van_barber_shop_directly_to_your_location">Mobile Van Barber Shop,\nDirectly to your location</string>
    <string name="welcome_to">Welcome to</string>
    <string name="find_and_book_barber_services_near_you">Find and Book Barber Services Near You!!</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="verify_phone_number_heading">Beauty treatments right at \nyour doorstep</string>
    <string name="log_in">Log In</string>
    <string name="phone_number">Phone Number</string>
    <string name="register_or_login">Register or Login</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="enter_your_otp_code_here">Enter your OTP code here</string>
    <string name="didn_t_you_received_any_code">Didn\'t you received any code?</string>
    <string name="resend_code">Resend Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_and_book_best_services">Find and book best services</string>
    <string name="bookings">Bookings</string>
    <string name="subscription">Subscriptions</string>
    <string name="wallet">Wallet</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="address">Address</string>
    <string name="your_booking_location">Your Booking Location</string>
    <string name="enable_your_location">Enable Your Location</string>
    <string name="enable_your_location_description">Please enable your location so the  barber can find you. Also you can share your  location with your barber.</string>
    <string name="agree">Agree</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="take_the_deal">Take the Deal</string>
    <string name="cancel">Cancel</string>
    <string name="pound_sign">£</string>
    <string name="message">Message</string>
    <string name="booking_details">Booking Details</string>
    <string name="booked_service">Booked Service :</string>
    <string name="total">Total : </string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="booking_history">Booking History</string>
    <string name="total_exppayment_historyense">Total Expense</string>
    <string name="payment_history">Payment History</string>
    <string name="add_review">Add Review</string>
    <string name="appointment">Appointment</string>
    <string name="select_time_to_slot_to_visit">Select time to slot to visit</string>
    <string name="slots_available">Slots Available</string>
    <string name="request_to_book_an_appointment">Request to Book an Appointment</string>
    <string name="select_services">Select Services</string>
    <string name="confirm">Confirm</string>
    <string name="ratings">Ratings</string>
    <string name="enter_your_comment">Enter Your Comment</string>
    <string name="add_photos_optional">Add Photos (Optional)</string>
    <string name="submit">Submit</string>
    <string name="reviews">Reviews</string>
    <string name="all_reviews">All Reviews</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s. \n\nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s. \n\nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s. \n\nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. \n\nLorem Ipsum has been the industry\'s standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. \n\nLorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.
    </string>
    <string name="mobile_number">Mobile Number</string>
    <string name="payment_details">Payment Details</string>
    <string name="we_protect_your_personal_information">We Protect Your Personal Information</string>
    <string name="card_details">Card Details</string>
    <string name="card_number">Card Number</string>
    <string name="secure_payment">Secure Payment</string>
    <string name="powered_by_stripe">Powered By Stripe</string>
    <string name="payment_screen_desc">By Proceeding with this booking you are accepting our Booking and Cancellation Terms</string>
    <string name="continue_text">Continue</string>
    <string name="done">Done</string>
    <string name="err_empty_phone_number">Please Enter Mobile Number</string>
    <string name="notification">Notification</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout?</string>
    <string name="err_valid_phone_number">Please enter valid mobile number</string>
    <string name="title_activity_get_location">Map</string>
    <string name="wallet_balance">Wallet Balance : </string>
    <string name="available_discount">Available Discount :</string>

    <!--for Google Place search API-->
    <string name="place_api_key">AIzaSyC7kiVlXV3vw-HjT_9UmKEoJ5su1KXJrBA</string>

    <!--for google map loading-->
    <!--    <string name="place_api_key">AIzaSyByAsh-Y-HsomZ0LvMiBfq2GYv8-mowebc</string>-->
    <string name="search">Search</string>
    <string name="services">Services</string>
    <string name="track_driver">Track Driver</string>
    <string name="barbers_near_you">Barbers near you</string>
    <string name="current_location">Current Location</string>
    <string name="filter">Filter</string>
    <string name="select_location">Select Location</string>
    <string name="sort_by">Sort By</string>
    <string name="favourite">Favourite</string>
    <string name="data_not_found">Data Not Found!!</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="time">Time</string>
    <string name="service">Service</string>
    <string name="hygiene">Hygiene</string>
    <string name="value">Value</string>
    <string name="change_location">Change Location</string>
    <string name="use_current_location">Use current location</string>
    <string name="post_code">Post code</string>
    <string name="enter_manually">Enter manually</string>
    <string name="title_activity_maps">Map</string>
    <string name="street_address_amp_number"><![CDATA[Street Address & number]]></string>
    <string name="house_apartment_no_optional">House / Apartment no. (optional)</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="pay_with">Pay with</string>
    <string name="peer_to_peer_barbering">Glow is the essence of beauty</string>
    <string name="save_profile">Save Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="check_internet_connection">Please check your internet connection!!</string>
    <string name="share">Share</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="portfolio">Portfolio</string>
    <string name="pricing">Pricing</string>
    <string name="review">Review</string>
    <string name="terms"><u>Terms</u></string>
    <string name="empty_slots">Please select slots</string>
    <string name="enter_name_on_card">Please enter name on card</string>
    <string name="enter_card_number">Please enter card number</string>
    <string name="enter_card_expiry_date">Please enter card expiry date</string>
    <string name="enter_cvv">Please enter CVV</string>
    <string name="future">Future</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="start_typing_location">Start Typing Location</string>
    <string name="select_stars_for_service">Please select stars for Service</string>
    <string name="select_stars_for_hygiene">Please select stars for Hygiene</string>
    <string name="select_stars_for_value">Please select stars for Value</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="are_you_sure_want_to_cancel_your_order">Are you sure want to cancel your order?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="photos">Photos</string>
    <string name="no_photos_found">No Photos Found</string>
    <string name="no_internet_connection">Oops! No Internet Connection!</string>
    <string name="offers">Offers</string>
    <string name="you_don_t_have_a_favourite_barber">You don\'t have a favourite barber</string>
    <string name="no_payment_history_was_found">No payment history was found</string>
    <string name="you_don_t_have_any_new_notifications">You don\'t have any new notifications</string>
    <string name="total_expense">Total Amount</string>
    <string name="your_booking_is_confirmed">Your booking is confirmed!</string>

</resources>