<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.enter_address_manually.EnterAddressActivity">

    <RelativeLayout
        android:id="@+id/relToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_pink"
        android:padding="@dimen/_8sdp">

        <ImageView
            android:id="@+id/ivBackButton"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back_arrow"
            app:tint="@color/app_black" />

        <TextView
            android:id="@+id/tvToolbarTitle"
            style="@style/HeadingType2BlackFont"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:drawablePadding="@dimen/_4sdp"
            android:text="@string/enter_manually"
            android:textColor="@color/app_black"
            android:textSize="@dimen/_15sdp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <TextView
                style="@style/HeadingType2BlackFont"
                android:text="@string/street_address_amp_number"
                android:textSize="@dimen/_11sdp" />

            <EditText
                android:id="@+id/edtStreetAddress"
                style="@style/BoxEditText"
                android:layout_marginTop="@dimen/_8sdp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                style="@style/HeadingType2BlackFont"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/house_apartment_no_optional"
                android:textSize="@dimen/_11sdp" />

            <EditText
                android:id="@+id/edtHouseNumber"
                style="@style/BoxEditText"
                android:layout_marginTop="@dimen/_8sdp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                style="@style/HeadingType2BlackFont"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/city"
                android:textSize="@dimen/_11sdp" />

            <EditText
                android:id="@+id/edtCity"
                style="@style/BoxEditText"
                android:layout_marginTop="@dimen/_8sdp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                style="@style/HeadingType2BlackFont"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/post_code"
                android:textSize="@dimen/_11sdp" />

            <EditText
                android:id="@+id/edtPostcode"
                style="@style/BoxEditText"
                android:layout_marginTop="@dimen/_8sdp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                style="@style/HeadingType2BlackFont"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/country"
                android:textSize="@dimen/_11sdp" />

            <EditText
                android:id="@+id/edtCountry"
                style="@style/BoxEditText"
                android:layout_marginTop="@dimen/_8sdp"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                android:id="@+id/tvConfirm"
                style="@style/BookAppointmentButton"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:paddingHorizontal="@dimen/_16sdp"
                android:textColor="@color/app_black"
                android:text="@string/confirm" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>