<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.fade.ui.get_started.GetStartedActivity">

    <ImageView
        android:id="@+id/iv_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_380sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:scaleType="center"
        android:src="@drawable/ic_get_started_main1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_main"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_main"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:text="@string/peer_to_peer_barbering"
            android:textColor="@color/app_black"
            android:textSize="@dimen/_14sdp" />

        <RelativeLayout
            android:id="@+id/relGetStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_main"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/ripple_effect">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvGetStarted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/get_started"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_arrow_next" />

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/bottomRel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relGetStarted"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_2sdp">

            <TextView
                style="@style/HeadingType2BlackFont"
                android:text="@string/by_clicking_start_you_agree_to_our"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvTerms"
                style="@style/HeadingType2BlackFont"
                android:layout_marginLeft="@dimen/_2sdp"
                android:text="@string/terms"
                android:textSize="14sp" />

            <TextView
                style="@style/HeadingType2BlackFont"
                android:layout_marginLeft="@dimen/_2sdp"
                android:text="@string/and"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvPrivacy"
                style="@style/HeadingType2BlackFont"
                android:layout_marginLeft="@dimen/_2sdp"
                android:text="@string/privacy"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>