<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.code_verify.CodeVerifyActivity">

    <RelativeLayout
        android:id="@+id/relToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="@dimen/_4sdp">

        <ImageView
            android:id="@+id/ivBackButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_4sdp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/tvToolbarTitle"
            style="@style/HeadingType2BlackFont"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_2sdp"
            android:text="@string/phone_verification"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text1"
        style="@style/HeadingType2BlackFont"
        android:layout_below="@+id/relToolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_45sdp"
        android:padding="@dimen/_2sdp"
        android:text="@string/enter_your_otp_code_here"
        android:textSize="@dimen/_14sdp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:visibility="gone"
        android:indeterminateTint="@color/app_black"
        android:layout_centerInParent="true"/>

    <com.mukesh.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:inputType="number"
        android:itemBackground="@drawable/drawable_otp_selector"
        android:textColor="@color/black"
        android:theme="@style/AppThemeOtp"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:state_filled="true"
        app:viewType="none" />

    <TextView
        android:id="@+id/text2"
        style="@style/HeadingType2BlackFont"
        android:layout_below="@+id/otp_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_32sdp"
        android:padding="@dimen/_2sdp"
        android:visibility="gone"
        android:text="@string/didn_t_you_received_any_code"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/tvResendOtp"
        style="@style/HeadingType2BlackFont"
        android:layout_below="@+id/text2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_32sdp"
        android:padding="@dimen/_2sdp"
        android:text="@string/resend_code"
        android:visibility="gone"
        android:textSize="@dimen/_14sdp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/tvResendOtp"
        android:layout_alignStart="@+id/tvResendOtp"
        android:visibility="gone"
        android:layout_alignEnd="@+id/tvResendOtp"
        android:background="@color/app_black" />

</RelativeLayout>