<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_8sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/drawable_white_rounded_corner_bg">

            <RelativeLayout
                android:id="@+id/rel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp">

                <TextView
                    android:id="@+id/tvDialogHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Logout"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/tvDialogMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvDialogHeader"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:text="@string/are_you_sure_want_to_logout"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/_13sdp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel"
                android:layout_marginTop="@dimen/_12sdp">

                <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@color/app_pink"
                    android:gravity="center"
                    android:padding="@dimen/_13sdp"
                    android:text="@string/cancel"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/tvLogout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="1dp"
                    android:layout_weight="1"
                    android:background="@color/app_pink"
                    android:gravity="center"
                    android:padding="@dimen/_13sdp"
                    android:text="@string/logout"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>