<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.fade.ui.change_location.ChangeLocationActivity">

    <RelativeLayout
        android:id="@+id/relToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_pink"
        android:padding="@dimen/_8sdp">

        <ImageView
            android:id="@+id/ivBackButton"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back_arrow"
            app:tint="@color/app_black" />

        <TextView
            android:id="@+id/tvToolbarTitle"
            style="@style/HeadingType2BlackFont"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:drawablePadding="@dimen/_4sdp"
            android:text="@string/change_location"
            android:textColor="@color/app_black"
            android:textSize="@dimen/_15sdp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relToolbar"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <RelativeLayout
            android:id="@+id/relCurrentLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/drawable_rounded_corner_border_black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/app_black"
                android:padding="@dimen/_12sdp"
                android:text="@string/use_current_location"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pin_white"
                app:tint="@color/app_black"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relPostCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/drawable_rounded_corner_border_black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/app_black"
                android:padding="@dimen/_12sdp"
                android:text="@string/post_code"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_black"
                app:tint="@color/app_black"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relEnterManually"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:background="@drawable/drawable_rounded_corner_border_black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/app_black"
                android:padding="@dimen/_12sdp"
                android:text="@string/enter_manually"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit_black"
                app:tint="@color/app_black"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>